--- a/LABEL/Dockerfile
+++ b/LABEL/Dockerfile
@@ -1,4 +1,4 @@
 FROM almalinux:9
 LABEL container="label" \
-      mainprocess="not exists"
+      mainprocess="not exists" \
       new="labelversion2"
